--- a/test-activity.Rmd
+++ b/test-activity.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Test activity: Loan default EDA"
+title: "Test activity"
 author: "ECON 122"
 output: github_document
 ---
@@ -10,88 +10,64 @@ library(knitr)
 ```
 
 ## First steps
-Make sure you completed the steps in this test assignment's GitHub README file. Keep the output type for this .Rmd a `github_document`.   
+If you followed the directions in the README file, you should be viewing this file in RStudio. As discussed in class, `.Rmd` files allow you to combine the **analysis** *AND* **writeup** of a project all in one document. If you use a different dataset, the code should dynamically update all the variables in the file.
 
-## To Do: Complete before Friday's class (9/5)
-Use full sentences to answer the questions below. Provide your answer and, if needed, an R chunk used to answer the question. You should be able to complete questions 1-4 with a little review of intro stats R commands. Give questions 5 and 6 a try even if you can't fully answer them. 
+## To Do: Complete before Wednesday's class (9/1)
+Go through and answer the questions below.
+
+Note: The grey portions of code between ` ```{r}` and ` ``` ` are called R chunks. They allow you to run code in real time by clicking on the green arrow. 
 
 ## Data description:
-The data for today's review example is a "classic" German credit data set. Each entry in the data set represents a loan given by the bank, along personal characteristics of the person the loan was given to, the type of loan and whether or not they paid it off or defaulted.  At the time, the deutsch mark was the unit of currency so an "DM" in the dataset refers to that unit of measurement. One of the main questions about this dataset is to understand factors associated with a loan defaulting (or not). For this analysis the variable `Good.Loan` indicates whether a loan was paid off (`GoodLoan`) or whether it defaulted (`BadLoan`).
+For today's assignment, I include code to import a data set related to bank loans. Later on in the course, we will cover importing data more thoroughly. 
+
+Click on the green arrow for the R chunk below. It may look like nothing happened but now you should have a new item `loans` appear in the environment tab to your right. If you click on the variable, it will show you the different variables that are included in the `loans` dataset. 
 
 ```{r}
 loans <- read.csv("https://raw.githubusercontent.com/mgelman/data/master/day1CreditData.csv")
-str(loans)
 ```
 
 
-## 1. Data basics
-How many loan cases are in the data? How many variables?
+## Data basics 
+When we load a data set, we typically want to know basic characteristics such as how many variables and observations there are. In R, the number of observations will be the `rows` and the number of variables will be the `columns`. The code chunk below shows how to return these values. 
 
-*answer:* answer here
 
 ```{r}
-# R chunk for questions above (if needed)
+nrow(loans)
+ncol(loans)
 ```
 
-We will not use all the variables in this handout. Here is a brief description of the variables used in this handout:
+## Hard coding data
 
-Variable | description
-------------------- | -------------------------------------------------
-`r names(loans)[2]` | loan length in months
-`r names(loans)[5]` |  amount of loan (in DM)
-`r names(loans)[21]` |  did the loan default or not
+From the code above, how many observations and variables are there in this dataset? Fill in your answer below by replacing XXXXX with the actual numbers. The "**" formats the output to be bold. 
 
-## 2. Default rate
-What percentage of loans in this dataset defaulted? 
+*answer:* There are **XXXXX** cases and **XXXXX** variables in the dataset. 
 
-*answer:* answer here
+## Embedding R variables into your Rmd code
 
-```{r}
-# R chunk for questions above (if needed)
-```
+Hard coding your data is appealing if your data set doesn't change. Sometimes, it's nice to see the output without having to `Knit` your code. However, if the data set changes, you have to go in and manually update the numbers. 
+
+`Rmd` files have the ability to embed one R code command into your text by wrapping it in "`r" followed by "`"
+
+For example, the square root of 10 is `r sqrt(10)`. When you `Knit` your `Rmd` file, you will see that now sqrt(10) is replaced by the actual value. Try it now by clicking on the `Knit` button above. 
+
+Using what you know about embedding R commands, write a dynamic version of your answer above by using the variable names for rows and columns instead of the actual numbers
 
 
-## 3. Default rate by duration
-What is the average loan duration in this data? Of the loans that defaulted, What percent have a duration of 2 years or less? More than 2 years?
+*answer:* There are **XXXXX** cases and **XXXXX** variables in the dataset. 
 
-*answer:* answer here
 
-```{r}
-# R chunk for questions above (if needed)
-```
+## Wrapping up 
 
-## 4. Default rate and credit amount
-What is the median credit amount for loans that defaulted? for loans that didn't default? Create a graph that that shows the credit amount distribution for each type of loan (good vs. bad), then compare these distributions.
+That's it for the `Rmd` portion of the assignment! Be sure to complete the assignment by following the steps below
 
-*answer:* answer here
+1. `Knit` your file so that your `.Rmd` file produces an `.md` file that is readable from GitHub
+2. Go to the Git tab on the upper right panel of Rstudio and `commit` the changes you made. The two important changes are 
+    1. A new file `test-activity.md` created from knitting your `.Rmd` file
+    2. Your `test-activity.Rmd` file should have changes made to it from filling in your answers
+3. `push` your changes to your `test-activity` GitHub repository
+4. Lastly, go back to GitHub to check that your changes were properly `pushed`. Once, I see that your new files have been pushed, you will receive credit for the assignment. 
 
-```{r}
-# R chunk for questions above (if needed)
-```
 
-## 5. A default prediction model
-Suppose that Barb the data scientist generates the following model criteria to predict when a loan will default. A loan will default if either criteria below is met:
 
-- Duration is longer than 2 years and credit amount is greater than 10,000 DM.
-- Duration is 2 years or less and credit amount is less than 2200 DM.
 
-Use this model to predict defaults for the loan data. (Hint: You will likely need to use the "and" operator `&`.) Then use the actual and predicted default variables to find the following rates:
 
-- What is the model's *accuracy* rate, i.e. the percentage of all loans that are correctly classified as good or bad? 
-- What is the model's *false positive rate*, i.e. the percentage of good loans that are predicted to default (a "positive" result)? (This is 1 minus the *specificity* of the model)
-- What is the model's *false negative rate*, i.e. the percentage of bad loans that are predicted to not default (a "negative" result)? (This is 1 minus the *sensitivity* of the model)
-
-*answer:* answer here
-
-```{r}
-# R chunk for questions above (if needed)
-```
-
-## 6. Try your default prediction model
-Try changing one or two parts of Barb's simple default criteria and see if you can get a better rates than Barb (higher accuracy and/or lower false rates). 
-
-*answer:* answer here
-
-```{r}
-# R chunk for questions above (if needed)
-```
